# Assignment-2

./: README.md  constants.py  prompt.md  pyproject.toml  utils.py
PyTorch/: data_loader.py  evaluate.py  main.py  models.py  train.py
TensorFlow/: data_loader.py  evaluate.py  main.py  models.py  train.py
Trained-Models/PyTorch/: CNN_model.pth  GRU_model.pth  LSTM_model.pth  RNN_model.pth
Trained-Models/TensorFlow/: CNN_model.h5  GRU_model.h5  LSTM_model.h5  RNN_model.h5
